Update signal version close #2

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@latelier/vue-signalr",
   "version": "1.0.0",
-  "description": "",
+  "description": "Signalr client for vue js",
   "main": "dist/vue-signalr.js",
   "files": [
     "dist/vue-signalr.js",
