--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/latelierco/vue-signalr#readme",
   "dependencies": {
     "@aspnet/signalr": "^1.0.3",
+    "@aspnet/signalr-protocol-msgpack": "^1.1.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
